Fix text alignment in button_to

--- a/app/assets/stylesheets/table-list.tailwind.css
+++ b/app/assets/stylesheets/table-list.tailwind.css
@@ -49,5 +49,9 @@
 
     .table-list form.button_to {
         @apply inline-block;
+
+        button {
+            text-align: left;
+        }
     }
 }
